adding new elements

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/elements.css">
+    <link rel="stylesheet" href="assets/css/classes.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/variables.css">
     <title>Landing page</title>
 </head>
 <body class="main-bg">
     <aside class="menu">
-        <section class="main-content menu-content">
+        <div class="main-content menu-content">
             <h1>
                 <a href="#">logo</a>
             </h1>
@@ -23,10 +27,30 @@
                 <li><a href="#">contact</a></li>
             </ul>
         </nav>
-    </section>
+        </div>
     </aside>
-    <section class="section"></section>
-    <section class="section"></section>
-    
+
+    <div class="menu-spacing"></div>
+
+    <section class="intro main-bg section">
+    <div class="main-content intro-content">
+        <div class="intro-text-content">
+            <h2>The Last of Us </h2>
+            <p>O episódio estreará na HBO as 23 horas do dia 22 de janeiro e será possível assistir ao episódio 02 de The Last of Us de graça através de um método.
+
+            É possível pegar 7 dias grátis do HBO Max através do nível 6 do mercado livre neste link bem aqui. Assim, você poderá desfrutar do episódio online totalmente de graça.
+            
+            The Last of Us é uma das estreias mais aguardadas do ano. Baseada no jogo homônimo da Naughty Dog, a série é produzida pela HBO e conta com direção de Craig Mazin (Chernobyl) e Neil Druckmann, o criador do game.</p>
+        </div>
+        <div class="intro-img">
+            <img src="assets/img/javascriptnotoptimized.svg" alt="draw with people holding javascript html and css elements">
+        </div>
+    </div>
+    </section>
+
+    <section class="main-bg section">
+
+    </section>
+
 </body>
 </html>
