--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <nav>
             <ul>
-                <li><a href="#">intro</a></li>
-                <li><a href="#">top 3</a></li>
+                <li><a href="#intro">intro</a></li>
+                <li><a href="#top3">top 3</a></li>
                 <li><a href="#">gallery</a></li>
                 <li><a href="#">work</a></li>
                 <li><a href="#">contact</a></li>
@@ -32,7 +32,7 @@
 
     <div class="menu-spacing"></div>
 
-    <section class="intro main-bg section">
+    <section id="intro" class="intro main-bg section">
     <div class="main-content intro-content">
         <div class="intro-text-content">
             <h2>The Last of Us </h2>
@@ -48,8 +48,14 @@
     </div>
     </section>
 
-    <section class="main-bg section">
-
+    <section class="white-bg section">
+        <div id="top3" class="main-content top3-content">
+            <h2>
+                The Last of Us 2 tem quanto tempo de jogo?
+            </h2>
+            <p>The Last of Us Part 2 teve lançamento oficial na última sexta-feira (19) para PlayStation 4 (PS4). Muito aguardado pelos fãs, o jogo continua a história dos protagonistas Ellie e Joel depois do grande sucesso de The Last of Us, originalmente lançado para PS3 em 2013. Desenvolvido pela Naughty Dog como um título exclusivo da Sony para o PS4, The Last of Us 2 é um jogo longo, e explorar todas as possibilidades pode levar até 30 horas.</p>
+            <p>Tudo depende do ritmo e interesse do jogador em vasculhar cada edifício e ponto da decaída cidade de Seattle, nos Estados Unidos, onde acontece grande parte da história. Veja, na lista a seguir, perguntas e respostas curiosas sobre The Last of Us Part 2, como "quanto tempo de jogo?", "quais músicas tocam?" e "quantos GB são necessários para baixar?", por exemplo.</p>
+        </div>
     </section>
 
 </body>
