--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="#intro">intro</a></li>
                 <li><a href="#top3">top 3</a></li>
-                <li><a href="#">gallery</a></li>
+                <li><a href="#gallery">gallery</a></li>
                 <li><a href="#">work</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
@@ -32,7 +32,7 @@
 
     <div class="menu-spacing"></div>
 
-    <section id="intro" class="intro main-bg section">
+    <section class="intro main-bg section">
     <div class="main-content intro-content">
         <div class="intro-text-content">
             <h2>The Last of Us </h2>
@@ -49,7 +49,7 @@
     </section>
 
     <section class="white-bg section">
-        <div id="top3" class="main-content top3-content">
+        <div id="intro" class="main-content top3-content">
             <h2>
                 The Last of Us 2 tem quanto tempo de jogo?
             </h2>
@@ -58,5 +58,31 @@
         </div>
     </section>
 
+    <section id="top3" class="grid-one main-bg section">
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Top 3</h2>
+            <p class="grid-description">A description</p>
+            <div class="grid">
+                <article>
+                    <h3>job</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, architecto commodi! Debitis laboriosam ad tempora recusandae inventore, ipsa hic reiciendis excepturi soluta, quaerat itaque illum quibusdam obcaecati. Consequatur, rerum molestiae.</p>
+                </article>
+                <article>
+                    <h3>other job</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, architecto commodi! Debitis laboriosam ad tempora recusandae inventore, ipsa hic reiciendis excepturi soluta, quaerat itaque illum quibusdam obcaecati. Consequatur, rerum molestiae.</p>
+                </article>
+                <article>
+                    <h3>Vacation</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, architecto commodi! Debitis laboriosam ad tempora recusandae inventore, ipsa hic reiciendis excepturi soluta, quaerat itaque illum quibusdam obcaecati. Consequatur, rerum molestiae.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="gallery" class="section white-bg">
+        <div class="main-content">
+            <h1>teste</h1>
+        </div>
+    </section>
 </body>
 </html>
