--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#intro">intro</a></li>
                 <li><a href="#top3">top 3</a></li>
                 <li><a href="#gallery">gallery</a></li>
-                <li><a href="#">work</a></li>
+                <li><a href="#work">work</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
         </nav>
@@ -35,12 +35,8 @@
     <section class="intro main-bg section">
     <div class="main-content intro-content">
         <div class="intro-text-content">
-            <h2>The Last of Us </h2>
-            <p>O episódio estreará na HBO as 23 horas do dia 22 de janeiro e será possível assistir ao episódio 02 de The Last of Us de graça através de um método.
-
-            É possível pegar 7 dias grátis do HBO Max através do nível 6 do mercado livre neste link bem aqui. Assim, você poderá desfrutar do episódio online totalmente de graça.
-            
-            The Last of Us é uma das estreias mais aguardadas do ano. Baseada no jogo homônimo da Naughty Dog, a série é produzida pela HBO e conta com direção de Craig Mazin (Chernobyl) e Neil Druckmann, o criador do game.</p>
+            <h2>Lorem ipsum dolor sit</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In amet ab cumque quisquam dicta esse ea, ex, molestias facilis possimus soluta id necessitatibus ducimus iste tenetur dignissimos! Cupiditate, praesentium voluptate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, accusantium? Id enim, sequi beatae aut, laboriosam sunt voluptatem non odit officia magni magnam iste ratione dolorem nesciunt, perspiciatis natus dolor? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam harum quaerat obcaecati vel mollitia nulla molestiae quis, maiores voluptatum perspiciatis nam reprehenderit beatae quibusdam? Quo dolor tempora voluptas iusto commodi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, accusamus provident corporis eligendi aspernatur sed aperiam minus recusandae eum obcaecati ratione rem natus! Nesciunt consequatur asperiores deserunt temporibus odit rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, laudantium possimus laboriosam totam molestiae autem iure deleniti enim, dolorum sed pariatur numquam quam fuga eos in corporis veniam maxime quae!</p>
         </div>
         <div class="intro-img">
             <img src="assets/img/javascriptnotoptimized.svg" alt="draw with people holding javascript html and css elements">
@@ -51,10 +47,9 @@
     <section class="white-bg section">
         <div id="intro" class="main-content top3-content">
             <h2>
-                The Last of Us 2 tem quanto tempo de jogo?
+               Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             </h2>
-            <p>The Last of Us Part 2 teve lançamento oficial na última sexta-feira (19) para PlayStation 4 (PS4). Muito aguardado pelos fãs, o jogo continua a história dos protagonistas Ellie e Joel depois do grande sucesso de The Last of Us, originalmente lançado para PS3 em 2013. Desenvolvido pela Naughty Dog como um título exclusivo da Sony para o PS4, The Last of Us 2 é um jogo longo, e explorar todas as possibilidades pode levar até 30 horas.</p>
-            <p>Tudo depende do ritmo e interesse do jogador em vasculhar cada edifício e ponto da decaída cidade de Seattle, nos Estados Unidos, onde acontece grande parte da história. Veja, na lista a seguir, perguntas e respostas curiosas sobre The Last of Us Part 2, como "quanto tempo de jogo?", "quais músicas tocam?" e "quantos GB são necessários para baixar?", por exemplo.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ipsum praesentium fugit veritatis rem magni recusandae rerum, cumque enim adipisci vel, molestiae ipsa. Aperiam, eos! Dolorem eos sint ullam. Aperi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo cumque soluta facere aut cum incidunt placeat eum dolorum vero. Facere, rem voluptatum? Molestias ad optio dolores aperiam perspiciatis deleniti deserunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quos suscipit tempora vel fugit, sapiente aliquid at laborum nobis totam qui facere repudiandae quam, minus itaque dolorem aspernatur quo ratione? Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque obcaecati, adipisci veniam eos ea aliquam perferendis? Voluptates ipsam corporis repellat harum nemo ea voluptatibus at totam ex. Incidunt, inventore. Tempora.</p>
         </div>
     </section>
 
@@ -79,10 +74,61 @@
         </div>
     </section>
 
-    <section id="gallery" class="section white-bg">
-        <div class="main-content">
-            <h1>teste</h1>
+    <section id="gallery" class="grid-one white-bg section">
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-description">A description</p>
+
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=1" alt="random Image">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=23" alt="random Image">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=23" alt="random Image">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=3" alt="random Image">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=33" alt="random Image">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=32" alt="random Image">
+                </div>
+            </div>
         </div>
     </section>
+
+    <section id="work" class="grid-one main-bg section">
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Lorem ipsum</h2>
+            <p class="grid-description">A description</p>
+            <div class="grid">
+                <article>
+                    <h3>job</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, architecto commodi! Debitis laboriosam ad tempora recusandae inventore, ipsa hic reiciendis excepturi soluta, quaerat itaque illum quibusdam obcaecati. Consequatur, rerum molestiae.</p>
+                </article>
+                <article>
+                    <h3>other job</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, architecto commodi! Debitis laboriosam ad tempora recusandae inventore, ipsa hic reiciendis excepturi soluta, quaerat itaque illum quibusdam obcaecati. Consequatur, rerum molestiae.</p>
+                </article>
+                <article>
+                    <h3>Vacation</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, architecto commodi! Debitis laboriosam ad tempora recusandae inventore, ipsa hic reiciendis excepturi soluta, quaerat itaque illum quibusdam obcaecati. Consequatur, rerum molestiae.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="pricing" class="white-bg section">
+        <div class="main-content intro-content">
+            <h2>Lorem ipsum dolor sit</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In amet ab cumque quisquam dicta esse ea, ex, molestias facilis possimus soluta id necessitatibus ducimus iste tenetur dignissimos! Cupiditate, praesentium voluptate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, accusantium? Id enim, sequi beatae aut, laboriosam sunt voluptatem non odit officia magni magnam iste ratione dolorem</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut optio ex mollitia doloribus delectus corrupti nihil ullam, repellat ducimus iste corporis animi eligendi sequi ipsum non vero ipsa quod eaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis magni veniam voluptate tempora nam reiciendis mollitia iure, cum alias quaerat sapiente culpa reprehenderit. Incidunt explicabo qui nihil dolore perferendis autem./p>
+        </div>
+        </section>
 </body>
 </html>
