--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#top3">top 3</a></li>
                 <li><a href="#gallery">gallery</a></li>
                 <li><a href="#work">work</a></li>
+                <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
         </nav>
@@ -124,11 +125,63 @@
     </section>
 
     <section id="pricing" class="white-bg section">
-        <div class="main-content intro-content">
-            <h2>Lorem ipsum dolor sit</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In amet ab cumque quisquam dicta esse ea, ex, molestias facilis possimus soluta id necessitatibus ducimus iste tenetur dignissimos! Cupiditate, praesentium voluptate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, accusantium? Id enim, sequi beatae aut, laboriosam sunt voluptatem non odit officia magni magnam iste ratione dolorem</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut optio ex mollitia doloribus delectus corrupti nihil ullam, repellat ducimus iste corporis animi eligendi sequi ipsum non vero ipsa quod eaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis magni veniam voluptate tempora nam reiciendis mollitia iure, cum alias quaerat sapiente culpa reprehenderit. Incidunt explicabo qui nihil dolore perferendis autem./p>
+        <div id="intro" class="main-content top3-content">
+            <h2>
+               pricing. 
+            </h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ipsum praesentium fugit veritatis rem magni recusandae rerum, cumque enim adipisci vel, molestiae ipsa. Aperiam, eos! Dolorem eos sint ullam. Aperi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo cumque soluta facere aut cum incidunt placeat eum dolorum vero. Facere, rem voluptatum? Molestias ad optio dolores aperiam perspiciatis deleniti deserunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quos suscipit tempora vel fugit, sapiente aliquid at laborum nobis totam qui facere repudiandae quam, minus itaque dolorem aspernatur quo ratione? Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque obcaecati, adipisci veniam eos ea aliquam perferendis? Voluptates ipsam corporis repellat harum nemo ea voluptatibus at totam ex. Incidunt, inventore. Tempora.</p>
+
+            <div class="responsive-table">
+                <table>
+                    <caption>pricing table</caption>
+
+                    <thead>
+                        <tr>
+                            <th>Title 1</th>
+                            <th>Title 2</th>
+                            <th>Title 3</th>
+                            <th>Title 4</th>
+                            <th>Title 5</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <td>
+                            <tr>
+                                <td>Content 1</td>
+                                <td>Content 2</td>
+                                <td>Content 3</td>
+                                <td>Content 4</td>
+                                <td>Content 5</td>
+                            </tr>
+                            <tr>
+                                <td>Content 1</td>
+                                <td>Content 2</td>
+                                <td>Content 3</td>
+                                <td>Content 4</td>
+                                <td>Content 5</td>
+                            </tr>
+                            <tr>
+                                <td>Content 1</td>
+                                <td>Content 2</td>
+                                <td>Content 3</td>
+                                <td>Content 4</td>
+                                <td>Content 5</td>
+                            </tr>
+                        </td>
+                    </tbody>
+
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Testing</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div> 
         </div>
-        </section>
+    </section>
+
 </body>
 </html>
