--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="assets/css/variables.css">
     <title>Landing page</title>
 </head>
-<body class="main-bg">
+<body>
+    <input type="checkbox" role="button" aria-label="Close menu" id="close-menu" class="close-menu">
+    <label for="close-menun" title="close-menu" class="close-menu-label"></label>
     <aside class="menu">
         <div class="main-content menu-content">
             <h1>
@@ -25,7 +27,7 @@
                 <li><a href="#gallery">gallery</a></li>
                 <li><a href="#work">work</a></li>
                 <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
         </div>
@@ -182,6 +184,49 @@
             </div> 
         </div>
     </section>
+
+    <section id="contact" class="intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>Lorem ipsum dolor sit</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In amet ab cumque quisquam dicta esse ea, ex, molestias facilis possimus soluta id necessitatibus ducimus iste tenetur dignissimos! Cupiditate, praesentium voluptate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, accusantium? Id enim, sequi beatae aut, laboriosam sunt voluptatem non odit officia magni magnam iste ratione dolorem nesciunt, perspiciatis natus dolor? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam harum quaerat obcaecati vel mollitia nulla molestiae quis, maiores voluptatum perspiciatis nam reprehenderit beatae quibusdam? Quo dolor tempora voluptas iusto commodi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, accusamus provident corporis eligendi aspernatur sed aperiam minus recusandae eum obcaecati ratione rem natus! Nesciunt consequatur asperiores deserunt temporibus odit rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, laudantium possimus laboriosam totam molestiae autem iure deleniti enim, dolorum sed pariatur numquam quam fuga eos in corporis veniam maxime quae!</p>
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/undraw_pancakes_238t.svg" alt="draw with people holding javascript html and css elements">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>contact Me</legend>
+
+                    <div class="form-group">
+                        <label for="first-name">first-name</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Your Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">last-name</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Your Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" placeholder="Your Email">
+                    </div>
+                    
+                    <div class="form-group full-width">
+                        <label for="message">message</label>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
+                    </div>
+
+                    <div class="form-group full-width">
+                        <button type="submit">Send message</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+        </section>
+
+        <footer id="footer" class="white-bg">
+            <p><a href="https://github.com/BarvesCode">Feito com <span class="heart">♥</span> por Barves</a></p>
+        </footer>
 
 </body>
 </html>
